Use Files.readString to read the whole file [HZ-3506] (#25756)